--- a/static/index.less
+++ b/static/index.less
@@ -1,3 +1,9 @@
-.a {
-  color: red;
+.canvasContainer {
+  display: flex;
+  justify-content: center;
 }
+.canvas {
+  border: 1px dotted #ccc;
+  margin: 0 auto;
+}
+
